client/css/style.css
/* ... */
.video-modal {
  display: none;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background: #eeebeb;
  padding: 20px;
  border-radius: 8px;
  z-index: 99999;
  width: 90%;
  height: 70vh;
  overflow-y: auto;
  gap: 20px;
  align-items: center;
}

.nav-element {
  color: #2f2f2e;
  text-decoration: none;
  cursor: pointer;
}

.top-navigation {
  display: flex;
  align-items: flex-start;
  margin: 8px;
  justify-content: space-around;
  background-color: var(--light-gray);
  padding: 10px;
  width: 744px;
  margin-bottom: 10px;
  padding: 14px;
  gap: 32px;
  border-radius: 8px;
  z-index: 69;
}

.top-navigation a:hover {
  color: black;
}
.top-navigation a {
  padding: 8px;
}

.top-navigation-container {
  display: flex;
  justify-content: center;
  width: 100%;
}

.top-navigation-a-container {
  height: 32px;
  display: flex;
  border-radius: 8px;
}

.top-navigation-a-container:hover {
  background-color: var(--light-gray-hover);
}

.nav-element:hover {
  color: var(--blur-border);
}

.row {
  display: flex;
  gap: var(--section-gap);
  overflow-y: auto;
  height: 100%;
}

.column {
  display: flex;
  flex: auto;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.box {
  backdrop-filter: blur(20px);
  -webkit-backdrop-filter: blur(20px);
  background-color: var(--blur-bg);
  height: 100%;
  width: 100%;
  border-radius: var(--border-radius-1);
  border: 1px solid var(--blur-border);
}

.center {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
}

.conversations {
  margin: 8px;
  max-width: 260px;
  min-width: 0;
  padding: var(--section-gap);

  background-color: var(--light-gray);
  border-radius: 8px;

  overflow: auto;

  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 16px;

  @media screen and (max-width: 990px) {
    display: none;
  }
}

ol li {
  margin-top: 8px;
  margin-bottom: 8px;
}

.conversations ul {
  margin: 24px 0;
  display: flex;
  flex-direction: column;
  gap: 14px;

  list-style-type: none;

  text-align: center;
}

.conversations ul li:hover {
  cursor: pointer;
  font-weight: bold;
}

.conversations h1,
h2,
h3 {
  margin: 8px 0px 8px 0px;
}

.content hr {
  margin: 8px 0 8px 0 !important;
}

.assistant-content {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.conversations a,
.conversations span,
.conversations i {
  color: #2f2f2e;
}

.logo {
  width: 120px;
  margin-top: auto;
}

.conversation {
  width: 100%;
  min-height: 50%;
  height: calc(100vh - 30px);
  overflow-y: auto;
  overflow-x: hidden;

  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}

.conversation #messages {
  width: 100%;
  display: flex;
  flex-direction: column;
  overflow-wrap: break-word;
  overflow-y: inherit;
  overflow-x: hidden;

  display: flex;
  align-items: center;
  height: calc(100vh - 230px);
}

.conversation .user-input {
}

.conversation .user-input input {
  font-size: 15px;
  width: 100%;
  height: 100%;
  padding: 12px 15px;
  background: none;
  border: none;
  outline: none;
  color: var(--colour-3);
}

.conversation .user-input input::placeholder {
  color: var(--user-input);
}

.gradient:nth-child(1) {
  --top: 0;
  --right: 0;
  --size: 70vw;
  --blur: calc(0.5 * var(--size));
  --opacity: 0.3;
  animation: zoom_gradient 6s infinite;
}

.gradient {
  position: absolute;
  z-index: -1;
  border-radius: calc(0.5 * var(--size));
  background-color: var(--accent);
  background: radial-gradient(circle at center, var(--accent), var(--accent));
  width: 70vw;
  height: 70vw;
  top: 50%;
  right: 0;
  transform: translateY(-50%);
  filter: blur(calc(0.5 * 70vw)) opacity(var(--opacity));
}

.conversations .title {
  font-size: 14px;
  font-weight: 500;
}

.conversations .convo {
  padding: 8px 12px;
  display: flex;
  gap: 18px;
  align-items: center;
  user-select: none;
  justify-content: space-between;
}
.conversations .convo:hover {
  cursor: pointer;
  background-color: var(--light-gray);
}

.conversations .convo .fa-trash:hover,
.conversations .convo .fa-check:hover,
.conversations .convo .fa-x:hover {
  background-color: var(--gray);
}
.conversations .convo i {
  padding: 8px;
  border-radius: 32px;
}

.conversations .convo:hover {
  background-color: var(--light-gray-hover);
}

.conversations .convo .left {
  cursor: pointer;
  display: flex;
  align-items: center;
  gap: 10px;
  flex: auto;
  min-width: 0;
}

.conversations i {
  color: #2f2f2e;
  cursor: pointer;
}

.convo-title {
  color: var(--colour-3);
  font-size: 14px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.message {
  width: 100%;
  overflow-wrap: break-word;
  display: flex;

  padding-top: var(--section-gap);
  padding-bottom: 0;
  max-width: 840px;
}

.message:last-child {
  animation: 0.6s show_message;
}

@keyframes show_message {
  from {
    transform: translateY(10px);
    opacity: 0;
  }
}

.message-user {
  flex-direction: row-reverse;
  text-align: left;
}

.message-user .content {
  background-color: none;
  color: #2f2f2e;
  padding: 12px;
  border-radius: 8px;
  max-width: 70%;
  background-color: var(--light-gray);

  margin-right: 40px;
}

div.message:last-child {
  margin-bottom: 32px;
}

.message-assistant {
  flex-direction: row;
  text-align: left;
}

.message-assistant .content {
  background-color: none;
  color: #2f2f2e;
  padding: 12px;
  border-radius: 8px;
  max-width: 92%;
}

.message .user,
.message .assistant {
  max-width: 48px;
  max-height: 48px;
  flex-shrink: 0;
  border-style: hidden;
}

.message .user img,
.message .assistant img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 8px;
  outline: 1px solid var(--blur-border);
}

.message .user:after,
.message .assistant:after {
  content: "63";
  position: absolute;
  bottom: 0;
  right: 0;
  height: 60%;
  width: 60%;
  background: var(--colour-3);
  filter: opacity(0);
  z-index: 10000;
}
/* ... */

